--- a/src/index.css
+++ b/src/index.css
@@ -3,14 +3,22 @@
 @tailwind components;
 @tailwind utilities;
 
+.dia:-webkit-autofill,
+.dia:-webkit-autofill:hover,
+.dia:-webkit-autofill:active,
+.dia:-webkit-autofill:focus {
+  background-color: #ffffff !important;
+  color: white !important;
+  -webkit-box-shadow: 0 0 0 1000px white inset !important;
+  -webkit-text-fill-color: #555555 !important;
+}
 
-
-input:-webkit-autofill,
-input:-webkit-autofill:hover,
-input:-webkit-autofill:active,
-input:-webkit-autofill:focus {
-    background-color: #FFFFFF !important;
-    color: white !important;
-    -webkit-box-shadow: 0 0 0 1000px white inset !important;
-    -webkit-text-fill-color: #555555 !important;
-    }
+.noche:-webkit-autofill,
+.noche:-webkit-autofill:hover,
+.noche:-webkit-autofill:active,
+.noche:-webkit-autofill:focus {
+  background-color: #1e2a47 !important;
+  color: white !important;
+  -webkit-box-shadow: 0 0 0 1000px #1e2a47 inset !important;
+  -webkit-text-fill-color: white !important;
+}
